# MotionDeterminationOffline

./: .gitignore  CMakeLists.txt  main.cpp
Data/: Weight
Data/Learning/: CheckData.txt  LearningCheck.txt  LearningCheck2.txt
INCLUDE/: Common.cpp  Common.h  EnvSelect.h  MemoryClass.h  R-LlgmnClass.cpp  R-LlgmnClass.h
MotionData/: MOTION1.TXT  MOTION2.TXT  MOTION3.TXT  MOTION4.TXT
